--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ pymupdf = { version = "^1.24", optional = true }
 pymupdf4llm = { version = "^0.0.17", optional = true }
 rapidocr-onnxruntime = { version = "^1.3", optional = true }
 unstructured = { version = "^0.15.0", extras = ["pdf"], optional = true }
+# For Parser Comparator
+openpyxl = { version = "^3.1.5", optional = true }
 
 [tool.poetry.extras]
 pdf = [
@@ -41,6 +43,9 @@ pdf = [
     "pymupdf4llm",
     "rapidocr-onnxruntime",
     "unstructured",
+]
+parser-comparator = [
+    "openpyxl",
 ]
 
 [tool.poetry.group.dev]
