--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ pymupdf = { version = "^1.24", optional = true }
 pymupdf4llm = { version = "^0.0.17", optional = true }
 rapidocr-onnxruntime = { version = "^1.3", optional = true }
 unstructured = { version = "^0.15.0", extras = ["pdf"], optional = true }
+azure-ai-documentintelligence = { version = "^1.0.0b4", optional = true }
 # For Parser Comparator
 openpyxl = { version = "^3.1.5", optional = true }
 
@@ -43,6 +44,7 @@ pdf = [
     "pymupdf4llm",
     "rapidocr-onnxruntime",
     "unstructured",
+    "azure-ai-documentintelligence",
 ]
 parser-comparator = [
     "openpyxl",
