--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ rapidocr-onnxruntime = { version = "^1.3", optional = true }
 unstructured = { version = "^0.15.0", extras = ["pdf"], optional = true }
 pytesseract = { version = "^0.3.13", optional = true }
 langchain-openai = { version = "^0.2", optional = true }
+llama-parse = { version = "^0.5", optional = true }
 
 [tool.poetry.extras]
 pdf = [
@@ -43,6 +44,7 @@ pdf = [
     "pymupdf4llm",
     "rapidocr-onnxruntime",
     "unstructured",
+    "llama-parse",
 
     "pytesseract",
     "langchain-openai",
@@ -52,15 +54,15 @@ pdf = [
 optional = true
 
 [tool.poetry.group.dev.dependencies]
-playwright = "^1.28.0"
-setuptools = "^67.6.1"
+playwright = "*"
+setuptools = "*"
 ipython = "*"
 ipykernel = "*"
-jupyter = "^1.0"
-jupyterlab_rise = "^0.42"
-pre-commit = "^3.6"
-twine = "^5.1.0"
-importlib-metadata = "7.2.1"
+jupyter = "*"
+jupyterlab_rise = "*"
+pre-commit = "*"
+twine = "*"
+importlib-metadata = "*"
 
 [tool.poetry.group.test.dependencies]
 # The only dependencies that should be added are
