--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ pytesseract = { version = "^0.3.13", optional = true }
 openpyxl = { version = "^3.1.5", optional = true }
 langchain-openai = { version = "^0.2", optional = true }
 llama-parse = { version = "^0.5", optional = true }
+exceptiongroup = { version = "^1", optional = true }
 
 [tool.poetry.extras]
 pdf = [
@@ -51,6 +52,7 @@ pdf = [
     "llama-parse",
 
     "pytesseract",
+    "exceptiongroup",
 ]
 parser-comparator = [
     "openpyxl",
