--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ openpyxl = { version = "^3.1.5", optional = true }
 langchain-openai = { version = "^0.2", optional = true }
 llama-parse = { version = "^0.5", optional = true }
 exceptiongroup = { version = "^1", optional = true }
+langchain-unstructured = { version=">=0.1.5", optional = true }
 
 [tool.poetry.extras]
 pdf = [
@@ -56,6 +57,7 @@ pdf = [
 ]
 parser-comparator = [
     "openpyxl",
+    "langchain-unstructured",
 ]
 
 [tool.poetry.group.dev]
