--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,8 @@ rapidocr-onnxruntime = { version = "^1.3", optional = true }
 unstructured = { version = "^0.15.0", extras = ["pdf"], optional = true }
 azure-ai-documentintelligence = { version = "^1.0.0b4", optional = true }
 pytesseract = { version = "^0.3.13", optional = true }
+docling-parse = { version = "^2.0", optional = true }
+
 # For Parser Comparator
 openpyxl = { version = "^3.1.5", optional = true }
 langchain-openai = { version = "^0.2", optional = true }
@@ -46,11 +48,13 @@ pdf = [
     "pdfminer-six",
     "pdfplumber",
     "pymupdf",
-    "pymupdf4llm",
     "rapidocr-onnxruntime",
     "unstructured",
     "azure-ai-documentintelligence",
+
+    "pymupdf4llm",
     "llama-parse",
+    "docling-parse",
 
     "pytesseract",
     "exceptiongroup",
