--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ packages = [
 
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.13"
+python = ">=3.10,<3.13"
 langchain-core = ">=0.3.0"
 langchain-community = ">=0.3.0"
 langchain = ">=0.3.0"
@@ -26,12 +26,15 @@ opencv-python = { version = "^4.5", optional = true }
 pdfminer-six = { version= "^20231228", optional = true }
 pdfplumber = { version = "^0.11.4", optional = true }
 pymupdf = { version = "^1.24", optional = true }
-pymupdf4llm = { version = "^0.0.17", optional = true }
 rapidocr-onnxruntime = { version = "^1.3", optional = true }
 unstructured = { version = "^0.15.0", extras = ["pdf"], optional = true }
 azure-ai-documentintelligence = { version = "^1.0.0b4", optional = true }
 pytesseract = { version = "^0.3.13", optional = true }
+
+# New parsers
+pymupdf4llm = { version = "^0.0.17", optional = true }
 docling-parse = { version = "^2.0", optional = true }
+llama_parse = { version = "^0.5", optional = true }
 
 # For Parser Comparator
 openpyxl = { version = "^3.1.5", optional = true }
@@ -125,6 +128,17 @@ optional = true
 
 [tool.poetry.group.codespell.dependencies]
 codespell = "^2.2.5"
+
+[tool.poetry.group.docs.dependencies]
+autodoc_pydantic = "^2"
+sphinx = ">=7"
+sphinx-autobuild = ">=2024"
+pydata-sphinx-theme = ">=0.15"
+toml = "^0.10.2"
+nbconvert = "^7.16"
+nbformat = "^5.0"
+myst_parser = "^4.0"
+
 
 [tool.codespell]
 skip = '.git,*.pdf,*.svg,*.pdf,*.yaml,*.ipynb,poetry.lock,*.min.js,*.css,package-lock.json,example_data,_dist,examples'
