--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,13 @@ version = "0.0.0"  # Set with git tag
 description = "This is a temporary project while I wait for my langchain-community [pull-request] to be validated."
 authors = ["Philippe PRADOS"]
 license = "Apache 2.0"
-readme = "README.md"
+readme = "PR_README.md"
 repository = "https://www.github.com/pprados/langchain-rag"
 homepage = "https://www.github.com/pprados/langchain-rag"
 packages = [
-  { include = "patch_langchain_community" },
-  { include = "patch_langchain_unstructured", from = "patch_partners/unstructured" },
+    { include = "patch_langchain_community" },
+    { include = "patch_langchain_unstructured", from = "patch_partners/unstructured" },
 ]
-
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
