--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,8 @@ pymupdf = { version = "^1.24", optional = true }
 rapidocr-onnxruntime = { version = "^1.3", optional = true }
 unstructured = { version = "^0.15.0", extras = ["pdf"], optional = true }
 azure-ai-documentintelligence = { version = "^1.0.0b4", optional = true }
-pytesseract = { version = "^0.3.13", optional = true }
+pytesseract = { version = "^0.3", optional = true }
+dedoc = { version = "^2.3", optional = true}
 
 # New parsers
 pymupdf4llm = { version = "^0.0.17", optional = true }
@@ -54,6 +55,7 @@ pdf = [
     "rapidocr-onnxruntime",
     "unstructured",
     "azure-ai-documentintelligence",
+    "dedoc",
 
     "pymupdf4llm",
     "llama-parse",
