Second test of PR

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,7 @@ parser-comparator = [
 optional = true
 
 [tool.poetry.group.dev.dependencies]
+pillow = "*"
 playwright = "*"
 setuptools = "*"
 ipython = "*"
