--- a/pyproject.toml
+++ b/pyproject.toml
@@ -115,7 +115,7 @@ ruff = "^0.1.9"
 types-toml = "^0.10.8.1"
 types-redis = "^4.3.21.6"
 types-pytz = "^2023.3.0.0"
-black = { version = "23.11.0", extras = ["jupiter"] }
+black = { version = "23.11.0", extras = ["jupyter"] }
 types-chardet = "^5.0.4.6"
 mypy-protobuf = "^3.0.0"
 types-google-cloud-ndb = "^2.0"
