--- a/pyproject.toml
+++ b/pyproject.toml
@@ -115,7 +115,7 @@ ruff = "^0.1.9"
 types-toml = "^0.10.8.1"
 types-redis = "^4.3.21.6"
 types-pytz = "^2023.3.0.0"
-black = { version = "23.11.0", extras = ["jupyter"] }
+black = { version = "24.3.0", extras = ["jupyter"] }
 types-chardet = "^5.0.4.6"
 mypy-protobuf = "^3.0.0"
 types-google-cloud-ndb = "^2.0"
@@ -285,7 +285,7 @@ alpha_version_format = '{version}a{distance}+{commit_hash}'
 
 [tool.black]
 target-version = ['py39', 'py310']
-required-version = '23.11.0'
+#required-version = '23.11.0'
 exclude = '''
 (
     asv_bench/env
@@ -422,7 +422,6 @@ ignore = [
   "PERF203",
 
 
-  ### TODO: Enable gradually
   # Useless statement
   "B018",
   # Within an except clause, raise exceptions with ...
