--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.13"
+python = ">=3.11,<3.13"
 langchain-core = ">=0.3.0"
 langchain-community = ">=0.3.0"
 langchain = ">=0.3.0"
@@ -29,6 +29,7 @@ rapidocr-onnxruntime = { version = "^1.3", optional = true }
 unstructured = { version = "^0.16", extras = ["pdf"], optional = true }
 azure-ai-documentintelligence = { version = "^1.0.0b4", optional = true }
 pytesseract = { version = "^0.3.13", optional = true }
+py-zerox = { version="0.0.7", optional = true }
 
 # New parsers
 pymupdf4llm = { version = "^0.0.17", optional = true }
@@ -57,6 +58,7 @@ pdf = [
     "pymupdf4llm",
     "llama-parse",
     "docling-parse",
+    "py-zerox",
 
     "pytesseract",
     "exceptiongroup",
