--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ py-zerox = { version="0.0.7", optional = true }
 
 # New parsers
 pymupdf4llm = { version = "^0.0.17", optional = true }
-docling-parse = { version = "^2.0", optional = true }
+docling = { version = "^2.12", optional = true }
 llama_parse = { version = "^0.5", optional = true }
 
 # For Parser Comparator
@@ -54,11 +54,11 @@ pdf = [
     "rapidocr-onnxruntime",
     "unstructured",
     "azure-ai-documentintelligence",
+    "py-zerox",
 
     "pymupdf4llm",
     "llama-parse",
-    "docling-parse",
-    "py-zerox",
+    "docling",
 
     "pytesseract",
     "exceptiongroup",
