--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,7 +71,7 @@ parser-comparator = [
 optional = true
 
 [tool.poetry.group.dev.dependencies]
-torch = "2.2"
+torch = "^2.2.2"
 pillow = "*"
 playwright = "*"
 setuptools = "*"
